fix alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,7 @@
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   /*temp height*/
   height: 50rem;
+  overflow: hidden;
 }
 
 .cta-img-box {
